--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Index
+        Welcome
     </title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +15,14 @@
         <H1>Welcome!</H1>
     </div>
     <div>
-        <form method="POST" action="auth/login">
-            ID: <input type="email" name="email" required /><br />
+        <form method="POST" action="auth/signin">
+            ID: <input type="username" name="username" required /><br />
             PW: <input type="password" name="password" required /><br />
-            <button type="submit">Login</button>
-        </form>
+            <button type="submit">Sign In</button>
+        </form><br />
+        <div>
+            &nbsp;<a href="signupPage">Sign Up</a> | <a>Forgot Password</a>
+        </div>
     </div>
 </body>
 
